--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.42.1",
     "react-hotkeys-hook": "^4.3.4",
     "react-router-dom": "^6.7.0",
+    "react-toastify": "^9.1.1",
     "react-tooltip": "^5.7.3",
     "recharts": "^2.3.2"
   },
