--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.11.18",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
