--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@tanstack/react-table": "^8.7.9",
     "@types/node": "^18.11.18",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
