--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.0.13",
     "@tanstack/react-table": "^8.7.9",
     "@types/node": "^18.11.18",
+    "@types/react-modal": "^3.13.1",
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-hotkeys-hook": "^4.3.4",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.7.0",
     "react-toastify": "^9.1.1",
     "react-tooltip": "^5.7.3",
