--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.2",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "openai": "^3.1.0",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "recharts": "^2.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
